add redis pub/sub

--- a/websocket-chat/.vscode/launch.json
+++ b/websocket-chat/.vscode/launch.json
@@ -13,11 +13,14 @@
             },
 
             "launchBrowser": {
-                "enabled": true,
+                "enabled": false,
                 "args": "${auto-detect-url}",
                 "windows": {
                     "command": "cmd.exe",
                     "args": "/C start ${auto-detect-url}"
+                },
+                "linux": {
+                    "command": "open"
                 },
                 "osx": {
                     "command": "open"
