--- a/websocket-chat/.vscode/tasks.json
+++ b/websocket-chat/.vscode/tasks.json
@@ -1,7 +1,7 @@
 {
     // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
-    "version": "0.1.0",
+    "version": "0.1.0",    
     "windows": {
         "command": "powershell",
         "options": {
@@ -31,6 +31,35 @@
                 "isBuildCommand": false,
                 "showOutput": "always",
                 "echoCommand": true
+            }
+        ]
+    },
+    "linux": {
+         "command": "/bin/bash",
+        "options": {
+            "cwd": "${workspaceRoot}"
+        },
+        "tasks": [
+            {
+                "taskName": "build",
+                "suppressTaskName": true,
+                "args": [ "-c", "./dockerTask.sh build debug" ],
+                "isBuildCommand": true,
+                "showOutput": "always"
+            },
+            {
+                "taskName": "compose",
+                "suppressTaskName": true,
+                "args": [ "-c", "./dockerTask.sh compose debug" ],
+                "isBuildCommand": false,
+                "showOutput": "always"
+            },
+            {
+                "taskName": "composeForDebug",
+                "suppressTaskName": true,
+                "args": [ "-c", "./dockerTask.sh composeForDebug debug" ],
+                "isBuildCommand": false,
+                "showOutput": "always"
             }
         ]
     },
