--- a/websocket-chat/project.json
+++ b/websocket-chat/project.json
@@ -13,7 +13,7 @@
     "Microsoft.Extensions.Configuration.FileExtensions": "1.0.0",
     "Microsoft.Extensions.Configuration.Json": "1.0.0",
     "Microsoft.Extensions.Configuration.CommandLine": "1.0.0",
-    "RabbitMQ.Client": "4.1.1-rc1"
+    "StackExchange.Redis":"1.1.608"
   },
   "tools": {
     "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final"
